fixed some known bugs and added docker